syntax = "proto3";

import "google/protobuf/empty.proto";

package AiiiGRPC;

message Item {
    string name = 1;
    string message = 2;
}

message List {
    repeated Item items = 1;
}

service ToDoService {
    rpc UnaryAddItem (Item) returns (List);
    rpc ClientStreamingAddItem (stream Item) returns (google.protobuf.Empty);
    rpc ServerStreamingSubList (google.protobuf.Empty) returns (stream Item);
    rpc BidirectionalStreamingAsyncList (stream Item) returns (stream List);
}